<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Tagger!</string>
    <string name="app_name">Taggr</string>
    <string name="no_gps">Location unavailable</string>
    <string name="no_user">No user specified</string>
    <string name="no_barcode">No barcode has been scanned yet</string>
    <string name="scan_button_label">Scan barcode</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="login">Log in</string>
    <string name="backspace">&lt;-</string>
    <string name="empty_string"></string>
    <string name="login_instructions">To log in enter your Id below</string>
    <string name="server_status_label">Server status:</string>
    <string name="refresh">Refresh</string>
    <string name="local_service_started">Local service started</string>
</resources>
