<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/longitudeLabel" android:text="@string/no_gps"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/latitudeLabel" android:text="@string/no_gps"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/useridLabel" android:text="@string/no_user"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/barcodeLabel" android:text="@string/no_barcode"></TextView>
    <Button android:id="@+id/scanButton" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/scan_button_label"></Button>
</LinearLayout>
